process javadoc in parallel